# zova

./: .gitignore  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml
bindings/go/: README.md  database.go  error.go  go.mod  graph.go  graph_test.go  notification.go  notification_test.go  object.go  object_test.go  statement.go  test.sh  vector.go  vector_test.go  zova.go  zova_test.go
bindings/go/examples/basic/: main.go
bindings/go/examples/graph_rag/: main.go
bindings/go/examples/graphs/: main.go
bindings/go/examples/notifications/: main.go
bindings/go/examples/objects/: main.go
bindings/go/examples/vectors/: main.go
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: basic.py  graph_rag.py  graphs.py  notifications.py  objects.py  smoke.py  vectors.py
bindings/python/python/zova/: __init__.py
bindings/python/src/: database.rs  error.rs  graph.rs  lib.rs  notification.rs  object.rs  statement.rs  vector.rs
bindings/python/tests/: test_graphs.py  test_lifecycle.py  test_notifications.py  test_objects.py  test_vectors.py
bindings/rust/: Cargo.toml  README.md
bindings/rust/zova/: Cargo.toml  README.md
bindings/rust/zova-sys/: Cargo.toml  LICENSE  README.md  build.rs
bindings/rust/zova-sys/src/: lib.rs
bindings/rust/zova-sys/tests/: abi.rs
bindings/rust/zova-sys/tools/: check-native-source.sh  sync-native-source.sh
bindings/rust/zova/examples/: basic.rs  graph_rag.rs  graphs.rs  notifications.rs  objects.rs  vectors.rs
bindings/rust/zova/src/: database.rs  error.rs  graph.rs  lib.rs  notification.rs  object.rs  shared.rs  statement.rs  vector.rs
bindings/rust/zova/tests/: graphs.rs  lifecycle.rs  notifications.rs  objects.rs  shared.rs  vectors.rs
docs/: sqlite-to-zova.md
include/: zova.h
scripts/: check-release.sh  distribute-release.sh  package-release.sh  repack-darwin-c-abi.sh
src/: c_api.zig  c_api_internal.zig  c_api_tests.zig  cli.zig  fastcdc.zig  graph.zig  graph_sql.zig  graph_sql_tests.zig  graph_tests.zig  main.zig  notify.zig  object.zig  object_fastcdc.zig  object_tests.zig  root.zig  sqlite.zig  vector.zig  vector_sql.zig  vector_sql_tests.zig  vector_tests.zig  zova.zig  zova_error.zig  zova_test_support.zig
tests/: c_abi_header_smoke.cpp  c_abi_smoke.c  check_c_abi_symbols.sh  cli.zig  e2e.zig
