[package]
name = "zova-python"
version = "0.17.0"
edition = "2021"
license = "MIT"
description = "PyO3 extension for the Zova Python package."
repository = "https://github.com/atasesli/zova"
homepage = "https://github.com/atasesli/zova"
readme = "README.md"

[lib]
name = "zova_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
zova_rust = { package = "zova", version = "0.17.0" }
