[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "zova"
version = "0.15.2"
description = "Python bindings for Zova"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[tool.maturin]
module-name = "zova._native"
python-source = "python"
features = ["pyo3/extension-module"]
